global: fix instagram overflow fixes #11

--- a/global-overlay-scrollbars.user.css
+++ b/global-overlay-scrollbars.user.css
@@ -80,3 +80,8 @@
 ::-webkit-scrollbar-thumb:hover {
   background: var(--webkit-scrollbar-thumb-hover) !important;
 }
+@-moz-document regexp("^https?://(www\.)?instagram.com/+.*") {
+  #react-root div[role="presentation"] {
+    overflow-x: hidden;
+  }
+}
